menu and stripe closes after selection, added confirmation (alignment issue with close button, fixing that now)

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -19,7 +19,7 @@ html,body,header,footer,section,aside,div,span,label,input,article,p,a,h1,h2,h3,
 	font-family: 'openSans';
 	outline: none !important;	
 }
-a,a:hover{ text-decoration: none; color: #000; cursor: pointer; outline: none !important;}
+a,a:hover{ text-decoration: none !important; color: #000; cursor: pointer; outline: none !important;}
 .no-margin{margin: 0;}
 .no-marign-right{ margin-right: 0; }
 .no-margin-left{ margin-left: 0; }
@@ -34,17 +34,17 @@ h1, h2, h3,h4, h5, h6,p{ color: #3b3b3b; margin-bottom: 20px;}
 h1{	font-size: 19px; text-transform: uppercase; }
 h2{	font-size: 17px; }
 h3{ font-size: 16px; }
-p{ font-size: 14px; }
+p{ font-size: 14px; line-height:1.7;}
 .blue-wrapper{ background: #336699; color: #fff; padding:30px; margin-bottom: 30px; opacity: .9; }
 .white-wrapper{ background: #FFF; color: #fff; padding:30px; margin-bottom: 30px; opacity: .9; }
-.blue-wrapper h1, .blue-wrapper p{ color: #fff;}
-.close{color: #fff;font-size: 18px;margin-top: 0;float: right;display: block;cursor: pointer;opacity: 1;font-weight: normal;text-shadow:none;line-height: 1.5;}
-.close:after{content: '\e606';font-family: 'icomoon';}
+.blue-wrapper h1, .blue-wrapper p{ color: #fff; }
+/*.close{color: #fff;font-size: 18px;margin-top: 0;float: right;display: block;cursor: pointer;opacity: 1;font-weight: normal;text-shadow:none;line-height: 1.5;}
+.close:after{content: '\e606';font-family: 'icomoon';}*/
 /*================================== COMPONENTS ==============================================*/
 
 /*------------------ Text Component ----------*/
 
-.text-component{font-size: 14px ;font-weight: normal;line-height: 2.3rem;}
+.text-component{font-size: 14px ;font-weight: normal;line-height:1.7;}
 
 /*------------------ Image Component --------------*/
 
@@ -85,7 +85,7 @@ p{ font-size: 14px; }
 .tab-component .nav-pills > li.active:after,
 .tab-component .nav-pills > li:hover::after {content: "\f05b"; font-family:'icomoon';font-size: 18px; position: absolute; display: block; margin-left: -9px;bottom:-16px; left:50%; z-index: 1000;	}
 .tab-component .tab-content {border-top: 1px solid #fff;}
-.tab-component .tab-pane p{color: #fff; line-height: 2.3rem;}
+.tab-component .tab-pane p{color: #fff; line-height:1.7;}
 
 /*--------------------------- Audio -----------------------------*/
 
@@ -109,10 +109,10 @@ p{ font-size: 14px; }
 
 .modal-backdrop { background-color: #fff; opacity:0.8; }
 .modal .modal-content{ border-radius: 0; box-shadow: none; border: 0;}
-.modal .modal-header{ background: #336699;	color: #fff;}
-.modal .modal-header .close{color: #fff;font-size: 37px; margin-top: 0; float: right; display: block; cursor: pointer; opacity: 1; font-weight: lighter; text-shadow:none; line-height: 2.3rem;}
-.modal .modal-title { color: #fff;font-weight: bold; font-size: 16px; line-height: 2.3rem}
-.modal .modal-body{ background: #F1F0F0;color: #000; font-weight: normal; font-size: 14px; line-height: 2.3rem;}
+.modal .modal-header{ background: #336699;	color: #fff; padding: 7px;}
+.modal .modal-header .close{color: #fff;font-size: 34px; margin-top: 0; float: right; display: block; cursor: pointer; opacity: 1; font-weight: lighter; text-shadow:none; line-height: 1.7;}
+.modal .modal-title { color: #fff;font-weight: bold; font-size: 16px; line-height: 1.7;}
+.modal .modal-body{ background: #F1F0F0;color: #000; font-weight: normal; font-size: 14px; line-height:1.7;}
 
 /*================================== COMPONENTS ==============================================*/
 
@@ -139,7 +139,7 @@ header #logo-wrapper span{ padding: 6px 0; display: inline-block; margin-right: 
 #menu-wrapper-stripe{ background: #F2F2F2; padding: 15px 30px; display: none;  position: absolute; width: 100%; z-index: 1000; }
 #menu-wrapper-stripe ul{margin: 0; padding: 0;} 
 #menu-wrapper-stripe li{margin: 0; padding: 0; display: inline-block; list-style-type: none;}
-#menu-wrapper-stripe a{  color: #01A1B9; padding: 7px 9px; outline: none!important; text-decoration: none; font-size: 16px; font-weight: normal; display: inline-block; margin-right: 80px; text-align: center; padding: 2px; line-height: 16px;}
+#menu-wrapper-stripe a{  color: #01A1B9; padding: 7px 9px; outline: none!important; text-decoration: none; font-size: 16px; font-weight: normal; display: inline-block; margin-right: 80px; text-align: center; padding: 2px; line-height: 1.7;}
 #menu-wrapper-stripe a:hover, #menu-wrapper-stripe a:focus{background: #DCE9EF;}
 #menu-wrapper-stripe a i{ font-size: 20px;padding-right: 7px; vertical-align: middle; cursor: pointer;}
 #menu-wrapper-stripe a label{font-weight: normal; vertical-align: middle; cursor: pointer;}
@@ -150,7 +150,7 @@ header #logo-wrapper span{ padding: 6px 0; display: inline-block; margin-right: 
 #menu-wrapper span{display: block;}
 #vertical-menu-wrapper{position: absolute;background: #4E4E4E; opacity: 0.9; color: #E1E1E1; display: none; height: auto; padding: 30px; width: 315px; z-index: 1000;}
 #vertical-menu-wrapper h3{color: #fff;font-size: 22px;margin-top: 0;display: inline-block;}
-#vertical-menu-wrapper .menu-close{color: #fff;font-size: 18px;margin-top: 0;float: right;display: block;cursor: pointer;opacity: 1;font-weight: normal;text-shadow:none;line-height: 1.5;}
+#vertical-menu-wrapper .menu-close{color: #fff;font-size: 18px;margin-top: 0;float: right;display: block;cursor: pointer;opacity: 1;font-weight: normal;text-shadow:none;line-height: 1.7;}
 #vertical-menu-wrapper .menu-close:after{content: '\e60b';font-family: 'icomoon';}
 #menu{position: relative;background: #4E4E4E;color: #E1E1E1;}
 #menu ul{margin: 0;padding: 0;height: auto;background: #4E4E4E;color: #E1E1E1;}
@@ -218,7 +218,7 @@ footer{background: #F2F2F2;min-height: 45px;max-width: 1110px;margin: 0 auto !im
 
 #footer-content #right-block a#click-me{color: #E3801B;font-style: italic;padding-top: 11px;margin-left: 42px;}
 #footer-content #right-block .v-divider{background: #D7D6D6;min-height: 44px;width: 1px;display: block;position: absolute;top: 0;right: 170px;}
-#pagination{height: 44px;line-height: 38px;}
+#pagination{height: 44px;line-height: 2;}
 #pagination #page-left-wrapper,
 #pagination #page-right-wrapper{cursor: pointer;}
 #pagination #page-left-wrapper,
